packages/taquito-michel-codec/test/contracts_011/ill_typed/unpack_sapling_state.tz
# Verify SAPLING_STATE is not packable. The contract should not typecheck when using `UNPACK`.
# The lines below UNPACK are present only in case of UNPACK allows SAPLING_STATE to
# make the typechecker happy.
parameter bytes;
storage (unit);
code { CAR;
       UNPACK (sapling_state 8);
       DROP;
       PUSH unit Unit;
       NIL operation;
       PAIR;
     }
